<?xml version="1.0"?>
<package format="2">
  <name>ping_driver</name>
  <version>0.1.0</version>
  <description>The ping_driver package, designed for Ohio State's Underwater Robotics Systems.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <author email="a.acitelli@gmail.com">Anden Acitelli</author>
  <maintainer email="a.acitelli@gmail.com">Anden Acitelli</maintainer>

  <!-- Required for catkin to even compile, even if it's empty  -->
  <license>THIS STRING CAN'T BE EMPTY DARN YOU CATKIN</license> 

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->

  <!-- Adds catkin as a build dependency -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- (hopefully) imports ros -->
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

  <!-- These two lines are REQUIRED in order to use custom messages -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>dynamic_reconfigure</build_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>

  <build_depend>gencfg</build_depend>
  <exec_depend>gencfg</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
